# product_control

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 7e351b5ed3ae_initial.py
docs/superpowers/plans/: 2026-04-15-security-refactor.md
docs/superpowers/specs/: 2026-04-15-security-refactor-design.md
scripts/: init_minio.py
src/: celery_app.py  main.py
src/api/v1/routers/: analytics.py  batches.py  products.py  tasks.py  webhooks.py
src/api/v1/schemas/: batch.py  common.py  product.py  task.py  webhook.py
src/core/: cache.py  config.py  database.py  dependencies.py  exceptions.py  rate_limit.py
src/domain/models/: __init__.py  batch.py  product.py  webhook.py  work_center.py
src/domain/repositories/: base_repository.py  batch_repository.py  product_repository.py  webhook_repository.py
src/domain/services/: analytics_service.py  batch_service.py  product_service.py  webhook_service.py
src/storage/: minio_service.py
src/tasks/: aggregation.py  exports.py  imports.py  reports.py  scheduled.py  webhooks.py
src/utils/: excel_generator.py  excel_parser.py  hmac_utils.py  pdf_generator.py
tests/: conftest.py
tests/integration/: conftest.py  test_analytics_api.py  test_batches_api.py  test_health.py  test_products_api.py  test_webhooks_api.py
tests/unit/: test_exceptions.py  test_hmac_utils.py  test_rate_limit_config.py  test_schemas.py
