[project]
name = "production-control"
version = "1.0.0"
description = "Production Control System - Web application for managing production shift tasks"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
